2009-07-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-window-manager.c (mb_wm_handle_property_notify):
	  Detect changes to MBWM_ATOM_MAEMO_SUPPRESS_ROOT_RECONFIGURATION
	  via property state rather than a toggle.  Requires newer
	  hildon-desktop.

2009-07-28  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.51

	* matchbox/core/mb-wm-client-window.c: Put the monster hack back, it
	is still needed for 800x480 windows...

2009-07-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Robustness improvement: warn if we can't read theme.xml and create
	a compositing theme as a fallback, so we don't crash and burn when
	starting to manage existing clients in mb_wm_init().

	* matchbox/theme-engines/mb-wm-theme.c (mb_wm_theme_new)

2009-07-27  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.50

	memset several different MBWMObjects to zero to invalidate them
	properly when they are destroyed, this to avoid using the freed memory
	area. Hopefully fixes NB#129979.

	* matchbox/core/mb-wm-client-window.c (mb_wm_client_window_destroy):
	memset the object to zero before freeing it.
	* matchbox/core/mb-wm-decor.c (mb_wm_decor_destroy,
	mb_wm_decor_button_destroy): memset the object to zero before freeing
	it.
	* matchbox/core/mb-wm-client.c (mb_wm_client_destroy): memset the
	object to zero before freeing it.

2009-07-24  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client-window.c (icon_from_net_wm_icon): Put a
	200kB limit for icons. Use zero return value to tell about OOM or
	too big icon.
	(mb_wm_client_window_sync_properties): Bail out from the loop if
	icon_from_net_wm_icon returns zero. Hopefully fixes NB#129833

2009-07-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-main-context.h
	* matchbox/core/mb-wm-main-context.c:
	  Allow for KeyRelease event handlers.

2009-07-23  Gordon Williams <gordon.williams@collabora.co.uk>

	Resolves half of NB#127320 - desktop panning