@@ -1,4 +1,14 @@
-2009-07-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+2009-07-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>
+
+	Diagnostic improvements.
+
+	* matchbox/core/mb-wm-util.c (error_handler):
+	  g_debug() more information in case of an XErrorEvent.
+	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
+	  Leave a note that we're screwing up if we're about to
+	  create 0x0 windows (a.k.a. "invisible windows" symptom).
+
+2009-07-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>
 
 	* matchbox/core/mb-window-manager.c (mb_wm_handle_property_notify):
 	  Detect changes to MBWM_ATOM_MAEMO_SUPPRESS_ROOT_RECONFIGURATION
